review comment implementation