@@ -1,6 +1,9 @@
 package org.pucar.validators;
 
-import org.egov.tracer.model.CustomException;
+import static org.mockito.Mockito.*;
+import static org.junit.jupiter.api.Assertions.*;
+
+import org.egov.common.contract.request.User;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -8,62 +11,63 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.pucar.repository.AdvocateClerkRepository;
-import org.pucar.web.models.AdvocateClerk;
-import org.pucar.web.models.AdvocateClerkRequest;
-import org.egov.common.contract.request.RequestInfo;
 import org.pucar.service.IndividualService;
+import org.pucar.web.models.*;
 
-import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
-import static org.junit.jupiter.api.Assertions.assertThrows;
-import static org.mockito.Mockito.*;
+import org.egov.tracer.model.CustomException;
+import org.egov.common.contract.request.RequestInfo;
 
 import java.util.Collections;
-import java.util.HashMap;
+import java.util.List;
 
 @ExtendWith(MockitoExtension.class)
-public class AdvocateClerkRegistrationValidatorTest {
-
-    @InjectMocks
-    private AdvocateClerkRegistrationValidator validator;
-
+class AdvocateClerkRegistrationValidatorTest {
     @Mock
     private IndividualService individualService;
 
     @Mock
     private AdvocateClerkRepository repository;
 
-    private AdvocateClerkRequest advocateClerkRequest;
-    private RequestInfo requestInfo;
+    @InjectMocks
+    private AdvocateClerkRegistrationValidator validator;
 
     @BeforeEach
     void setUp() {
-        advocateClerkRequest = new AdvocateClerkRequest();
-        requestInfo = new RequestInfo();
-        advocateClerkRequest.setRequestInfo(requestInfo);
+        // Setup necessary for each test can go here
     }
 
     @Test
-    void validateAdvocateRegistration_ValidAdvocate_NoExceptionThrown() {
-        AdvocateClerk advocate = new AdvocateClerk();
-        advocate.setIndividualId("validIndividualId");
-        advocate.setTenantId("validTenantId");
-        advocateClerkRequest.setClerks(Collections.singletonList(advocate));
-
-        when(individualService.searchIndividual(requestInfo, "validIndividualId", new HashMap<>())).thenReturn(true);
-
-        assertDoesNotThrow(() -> validator.validateAdvocateClerkRegistration(advocateClerkRequest));
+    void testValidateAdvocateClerkRegistration_ThrowsExceptionForNullUserInfo() {
+        AdvocateClerkRequest request = new AdvocateClerkRequest();
+        request.setRequestInfo(new RequestInfo());
+        // User info is null, should throw exception
+        assertThrows(CustomException.class, () -> validator.validateAdvocateClerkRegistration(request));
     }
 
     @Test
-    void validateAdvocateRegistration_InvalidIndividualId_ThrowsIllegalArgumentException() {
-        AdvocateClerk advocate = new AdvocateClerk();
-        advocate.setIndividualId("invalidIndividualId");
-        advocate.setTenantId("validTenantId");
-        advocateClerkRequest.setClerks(Collections.singletonList(advocate));
+    void testValidateAdvocateClerkRegistration_ValidRequest() {
+        // Setting up a valid request scenario
+        AdvocateClerk clerk = new AdvocateClerk();
+        clerk.setTenantId("someTenantId");
+        clerk.setIndividualId("someIndividualId");
+        RequestInfo requestInfo = new RequestInfo();
+        requestInfo.setUserInfo(new User());
+        AdvocateClerkRequest request = new AdvocateClerkRequest(requestInfo, List.of(clerk));
 
-        when(individualService.searchIndividual(requestInfo, "invalidIndividualId", new HashMap<>())).thenReturn(false);
+        when(individualService.searchIndividual(any(RequestInfo.class), anyString(), anyMap()))
+                .thenReturn(true);
 
-        assertThrows(CustomException.class, () -> validator.validateAdvocateClerkRegistration(advocateClerkRequest));
+        assertDoesNotThrow(() -> validator.validateAdvocateClerkRegistration(request));
     }
 
+    @Test
+    void testValidateApplicationExistence_NonExistentApplication() {
+        // Setup
+        AdvocateClerk advocateClerk = new AdvocateClerk();
+        advocateClerk.setApplicationNumber("12345");
+        when(repository.getApplications(any(), any(), anyString(), any(), anyInt(), anyInt()))
+                .thenReturn(Collections.emptyList()); // Mock to return empty list, simulating no applications found
+
+        assertThrows(CustomException.class, () -> validator.validateApplicationExistence(advocateClerk));
+    }
 }
